--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,5 +1,6 @@
 h1 {
   text-decoration: underline wavy;
+  padding-bottom: 1rem;
 }
 
 /* .main {
